--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^0.17.1",
+    "firebase": "^4.8.0",
     "highlight.js": "^9.12.0",
     "vee-validate": "^2.0.0-rc.25",
     "vue": "^2.4.4",
